<resources>
    <string name="app_name">D_Planner</string>
    <string name="action_settings">Settings</string>
    <string name="action_today">Go to today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="action_version">Version</string>
    <string name="action_capture">Widget Capture</string>
    <string name="action_chat">Chat</string>
    <string name="title_activity_test">Test</string>

    <string name="title_activity_jiver">JIVER</string>

    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>
</resources>
