<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity">

    <item
        android:id="@+id/action_today"
        android:orderInCategory="100"
        android:title="@string/action_today"
        />
    <item
        android:id="@+id/action_tutorial"
        android:orderInCategory="100"
        android:title="@string/action_tutorial"
        />

    <item
        android:id="@+id/action_version"
        android:orderInCategory="100"
        android:title="@string/action_version"
        />

    <item
        android:id="@+id/action_chat"
        android:orderInCategory="100"
        android:title="@string/action_chat"

        /><item android:id="@+id/action_capture" android:orderInCategory="100" android:title="@string/action_capture" />


</menu>